# jsonc

./: README.md  example.py  pyproject.toml
jsonc/: __init__.py  __main__.py
tests/: test_file.jsonc  test_jsonc.py  test_main.py
